Add logo.webp and update tweet text

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prover Stage 2.5</title>
+    <link rel="icon" type="image/webp" href="logo.webp">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
     <style>
@@ -837,7 +838,7 @@
                                                 canvas.toBlob(function(blob) {
                                                     const formData = new FormData();
                                                     formData.append('image', blob, 'screenshot.png');
-                                                    const tweetText = encodeURIComponent(`I JUST WON ${totalProofs} PROOFS PER HOUR!`);
+                                                    const tweetText = encodeURIComponent(`I just run a test PROVER, and got ${totalProofs} WON PROOFS PER HOUR! Check your build too! prover-stage-2-5.vercel.app`);
                                                     const twitterUrl = `https://twitter.com/intent/tweet?text=${tweetText}`;
                                                     window.open(twitterUrl, '_blank', 'width=600,height=400');
                                                 });
