--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prover Stage 2.5</title>
+    <title>Prover - Stage 2.5</title>
     <link rel="icon" type="image/webp" href="logo.webp">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
@@ -432,6 +432,9 @@
             </div>
         </div>
         <div id="terminal"></div>
+        <audio id="backgroundAudio" loop>
+            <source src="background.mp3" type="audio/mp3">
+        </audio>
     </div>
     <script>
         const proofsData = {
@@ -607,6 +610,7 @@
             }
         };
         let selectElements = {};
+        let backgroundAudioPlayed = false;
         function adjustVideoSizes() {
             const container = document.getElementById('background-video-container');
             const backgroundVideos = [
@@ -745,6 +749,15 @@
                     });
                     updateBackground(null, colorSelect.value);
                     startButton.addEventListener('click', function() {
+                        if (!backgroundAudioPlayed) {
+                            const backgroundAudio = document.getElementById('backgroundAudio');
+                            backgroundAudio.volume = 0.02;
+                            backgroundAudio.play();
+                            backgroundAudioPlayed = true;
+                        }
+                        const startAudio = new Audio('start.mp3');
+                        startAudio.volume = 0.015;
+                        startAudio.play();
                         startLaunch();
                     });
                 }
@@ -830,6 +843,9 @@
                                         resultText.className = 'result-text';
                                         resultText.textContent = `WON PROOFS / HOUR - ${totalProofs}`;
                                         cmdText.appendChild(resultText);
+                                        const resultAudio = new Audio('result.mp3');
+                                        resultAudio.volume = 0.0667;
+                                        resultAudio.play();
                                         const twitterButton = document.createElement('button');
                                         twitterButton.className = 'twitter-share-button';
                                         twitterButton.innerHTML = '<svg class="twitter-icon" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.733-.666 1.585-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.396 0-.788-.023-1.175-.068 2.187 1.405 4.787 2.224 7.544 2.224 9.056 0 14.01-7.496 14.01-13.986 0-.213-.005-.426-.014-.637.962-.695 1.8-1.562 2.457-2.549z"/></svg> Share on Twitter';
